--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "font-awesome": "^4.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.27.0",
     "react-uuid": "^2.0.0",
     "sass": "^1.80.4"
