--- a/backend/package.json
+++ b/backend/package.json
@@ -19,8 +19,10 @@
     "express": "^4.21.1",
     "md5": "^2.3.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.3",
     "nodemon": "^3.1.7",
+    "sequelize": "^6.37.5",
     "uuid": "^10.0.0"
   }
 }
