--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.27.0",
+    "react-transition-group": "^4.4.5",
     "react-uuid": "^2.0.0",
     "sass": "^1.80.4"
   },
@@ -30,6 +31,7 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "@types/react-transition-group": "^4.4.11",
     "@vitejs/plugin-react": "^4.3.3",
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
