feat: configure environment variables for database connection and add new serve script

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "nodemon index.js"
+    "serve": "nodemon index.js",
+    "serve:vuongnq": "nodemon node --env-file=.env.vuongnq index.js"
   },
   "author": "",
   "license": "ISC",
