fix: add postinstall script to package.json for improved setup process

--- a/admin-app/package.json
+++ b/admin-app/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "prepare": "cd .. && husky ./admin-app/.husky"
+    "prepare": "cd .. && husky ./admin-app/.husky",
+    "postinstall": "npm run prepare"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
