fix: remove postinstall script from package.json and update ESLint configuration for improved consistency

--- a/admin-app/package.json
+++ b/admin-app/package.json
@@ -8,8 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "prepare": "cd .. && husky ./admin-app/.husky",
-    "postinstall": "npm run prepare"
+    "prepare": "cd .. && husky ./admin-app/.husky"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
