--- a/admin-app/package.json
+++ b/admin-app/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.7.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^7.0.1",
     "react-transition-group": "^4.4.5"
   },
