--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.20.3",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "md5": "^2.3.0",
