--- a/admin-app/package.json
+++ b/admin-app/package.json
@@ -24,7 +24,8 @@
     "react-dom": "^18.3.1",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^7.0.1",
-    "react-transition-group": "^4.4.5"
+    "react-transition-group": "^4.4.5",
+    "sass": "^1.86.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
