--- a/admin-app/package.json
+++ b/admin-app/package.json
@@ -25,8 +25,7 @@
     "react-dom": "^18.3.1",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^7.0.1",
-    "react-transition-group": "^4.4.5",
-    "sass": "^1.86.3"
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
@@ -44,6 +43,7 @@
     "lint-staged": "^15.2.10",
     "postcss": "^8.4.49",
     "prettier": "3.3.3",
+    "sass": "^1.87.0",
     "tailwindcss": "^3.4.15",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
