--- a/frontend/User/package.json
+++ b/frontend/User/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.5",
     "@tanstack/react-query": "^5.76.0",
     "axios": "^1.9.0",
+    "keen-slider": "^6.8.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.3",
