--- a/admin-app/package.json
+++ b/admin-app/package.json
@@ -24,10 +24,12 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1",
-    "react-transition-group": "^4.4.5"
+    "react-transition-group": "^4.4.5",
+    "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@tailwindcss/vite": "^4.1.7",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
@@ -40,10 +42,8 @@
     "globals": "^15.11.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.2.10",
-    "postcss": "^8.4.49",
     "prettier": "3.3.3",
     "sass": "^1.87.0",
-    "tailwindcss": "^3.4.15",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10"
