--- a/frontend/User/package.json
+++ b/frontend/User/package.json
@@ -10,18 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "@tanstack/react-query": "^5.76.0",
     "axios": "^1.9.0",
+    "framer-motion": "^12.12.1",
     "keen-slider": "^6.8.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.3",
-    "tailwindcss": "^4.1.7",
-    "sass": "^1.87.0"
+    "sass": "^1.87.0",
+    "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
-    "@tailwindcss/vite": "^4.1.5",
     "@eslint/js": "^9.25.0",
+    "@tailwindcss/vite": "^4.1.5",
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
