--- a/frontend/User/package.json
+++ b/frontend/User/package.json
@@ -27,6 +27,7 @@
     "@tailwindcss/vite": "^4.1.5",
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.2",
+    "@vitejs/plugin-react-swc": "^3.9.0",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.25.0",
