--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "md5": "^2.3.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
