Update DB_USER in .env file for consistency with naming conventions

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-DB_NAME=restuarent_tno0
-DB_USER = restaurant_user
+DB_NAME = restuarent_tno0
+DB_USER = restuarent_tno0_user
 DB_HOST = dpg-d1eg33uuk2gs73am4dc0-a
 DB_PORT = 5432
 DB_PASSWORD = X5cqbkwMy4I8S0PsaGmF56k7HHVKgUVK
