--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,19 @@
-{
-  "name": "restaurant-chicken-monorepo",
-  "version": "1.0.0",
-  "scripts":
-    {
-      "build:frontend": "cd app-frontend && npm install && npm run build",
-      "start:backend": "cd app-backend && npm install && node index.js",
-    },
-  "devDependencies": {},
-  "dependencies": {},
-}
+# render.yaml - Đặt ở thư mục gốc của repo
+# REPOSITORY_GOC/render.yaml
+
+services:
+  - type: web
+    name: restaurant-chicken-frontend
+    env: static
+    buildCommand: npm install --prefix app-frontend && npm run build --prefix app-frontend
+    staticPublishPath: ./app-frontend/dist
+    routes:
+      - type: rewrite
+        source: /*
+        destination: /index.html
+  - type: web
+    name: restaurant-chicken-backend
+    env: node
+    buildCommand: npm install --prefix app-backend
+    startCommand: npm start --prefix app-backend
+    port: 7777
