--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "keywords": [],
   "description": "",
   "dependencies": {
+    "@getvim/execute": "^1.0.0",
     "body-parser": "^1.20.3",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.7",
